# ChordMonkey

./: README.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: handler.py  main.py
backend/app/api/: routes.py
backend/app/controllers/: chord_analysis.py  chord_recommendation.py  midi_conversion.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/api/analyze-midi/: route.ts
frontend/app/api/recommendations/: route.ts
frontend/app/api/transcribe-to-midi/: route.ts
frontend/app/discover/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/my-songs/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/welcome/: page.tsx
frontend/components/: AuthProvider.tsx  ChordDisplay.tsx  ChordProgression.tsx  ChordRecommendations.tsx  CreatePageTutorial.tsx  GuitarDiagram.tsx  KeyboardDiagram.tsx  Navbar.tsx  ParticlesBackground.tsx  PitchToMidiConverter.tsx  RecordingSection.tsx  SongSectionsPreview.tsx  ThemeProvider.tsx
frontend/components/chord-progression/: SectionBlock.tsx  SectionEditor.tsx  constants.ts  types.ts  useChordPlayback.ts
frontend/lib/: auth.ts  chord-audio.ts  create-page-types.ts  utils.ts
